# LLM_Assignment

./: .env.example  README.md  anomaly_detection.py  app.py  config.py  data_preparation.py  evaluation.py  feature_extraction.py  instance.py  models.py  openai_client.py  pyproject.toml  utils.py
data/: anomaly_detection.csv  feature_extraction.csv  metadata_anomaly_detection.csv  metadata_data_preparation.csv  metadata_evaluation.csv  metadata_feature_extraction.csv  prepared_data.csv  raw_data.csv  vectorized_output.csv
src/: anomaly_detection.py  config.py  data_preparation.py  evaluation.py  feature_extraction.py  models.py  openai_client.py
