[project]
name = "aim-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "graphviz>=0.20.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
type = [
    "mypy>=1.15.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff] 
line-length=80

